--- a/index.html
+++ b/index.html
@@ -3,22 +3,26 @@
 
 <head>
     <title>Basic Web Page</title>
+   
+
 </head>
 
 <body>
-    <form method="post" action="/addname">
-        <label>Enter Your Frist Name</label><br>
-        <input type="text" name="firstName" placeholder="First name" required></br>
-        <label>Enter Your Last Name</label><br>
-        <input type="text" name="lastName" placeholder="Last name" required></br>
-        <label>Enter Your Email Address</label><br>
-        <input type="text" name="email" placeholder="Email" required></br>
-        <label>Enter Your Phone Number</label><br>
-        <input type="text" name="phonenbr" placeholder="Phone number" required></br>
-        <label>Enter Your Gender</label><br>
-        <input type="text" name="gender" placeholder="Gender" required></br>
-        <input type="submit" value="Add Name">
-    </form>
+    <div class="dbinput">
+        <form method="post" action="/addname">
+            <label>Enter Your Frist Name</label><br>
+            <input type="text" name="firstName" placeholder="First name" required></br>
+            <label>Enter Your Last Name</label><br>
+            <input type="text" name="lastName" placeholder="Last name" required></br>
+            <label>Enter Your Email Address</label><br>
+            <input type="text" name="email" placeholder="Email" required></br>
+            <label>Enter Your Phone Number</label><br>
+            <input type="text" name="phonenbr" placeholder="Phone number" required></br>
+            <label>Enter Your Gender</label><br>
+            <input type="text" name="gender" placeholder="Gender" required></br>
+            <input type="submit" value="Add Name">
+        </form>
+    </div>
 </body>
 
 </html>
